--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -60,7 +60,7 @@
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -10;
+    /*z-index: -10;*/
 }
 
 .portrait-stat-block {
@@ -75,6 +75,7 @@
     padding: 0.75rem;
     position: relative;
     gap: 0.5ch;
+    z-index: 1;
 }
 .portrait-stat-block:not(.player-details):before {
     backdrop-filter: var(--ech-blur-amount);
