--- a/templates/partials/Tooltip.hbs
+++ b/templates/partials/Tooltip.hbs
@@ -8,8 +8,8 @@
     <div class="ech-tooltip-details">
       {{#each details}}
       <div>
-        <span>{{localize label}}</span>
-        <span>{{value}}</span>
+        <span>{{{localize label}}}</span>
+        <span>{{{value}}}</span>
       </div>
       {{/each}}
     </div>
