--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -66,6 +66,7 @@
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: top center;
     /*z-index: -10;*/
 }
 
