--- a/templates/theme-options.hbs
+++ b/templates/theme-options.hbs
@@ -1,7 +1,7 @@
 <form action="#">
 	<h3 class="flexrow">
 		Argon - Combat HUD: Theme Options
-        <button type="button" name="export" onclick="echThemeOptions.defaultOptions.createTheme();">
+        <button type="button" name="export">
             <i class="fas fa-file-export">{{localize 'enhancedcombathud.themeOptions.export'}}</i>
         </button>
 	</h3>
