--- a/styles/ActionHUD.css
+++ b/styles/ActionHUD.css
@@ -83,6 +83,7 @@
     position: absolute;
     text-transform: uppercase;
     width: 100%;
+    text-align: center;
 }
 
 .action-element.item-button .action-element-title {
