--- a/styles/highjacked-window.css
+++ b/styles/highjacked-window.css
@@ -80,3 +80,21 @@
     border-bottom-right-radius: 3px;
     border-left-width: 0px;
 }
+
+.ech-highjack-window .guide-list span{
+    flex: none;
+    padding: 0 4px;
+    min-width: 24px;
+    background: rgba(255, 255, 255, 0.25);
+    border: 1px solid var(--color-border-light-2);
+    border-radius: 5px;
+    box-shadow: 1px 1px #444;
+    text-align: center;
+}
+
+.ech-highjack-window .guide-list .notification.info::before{
+    content: "";
+    padding: 0;
+    margin: 0;
+    max-width: 0px;
+}
