--- a/styles/highjacked-window.css
+++ b/styles/highjacked-window.css
@@ -98,3 +98,10 @@
     margin: 0;
     max-width: 0px;
 }
+
+.ech-highjack-window p.guide-content{
+    font-weight: 600;
+    text-align: center;
+    margin: 0.5rem;
+    margin-bottom: 1rem;
+}
