--- a/templates/partials/PortraitPanel.hbs
+++ b/templates/partials/PortraitPanel.hbs
@@ -25,4 +25,7 @@
 
 
 		</div>
+		<div class="portrait-actor-configuration">
+			<i id="argon-actor-config" class="fa-solid fa-gear"></i>
+		</div>
 	</div>
